Time: 32 ms (44.77%), Space: 51 MB (98.49%) - LeetHub